[package]
name = "opaque_pool"
description = "A pinned object pool that is ignorant of the type of items it contains"
publish = true
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
num = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
mutants = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "op_basic"
harness = false
