[package]
name = "opaque_pool"
description = "A pinned object pool that is ignorant of the type of items it contains"
publish = true
version = "0.1.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []

[dependencies]
new_zealand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
mutants = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "opaque_basic"
harness = false
