[package]
name = "region_cached"
description = "Add a layer of cache between L3 and main memory"
publish = true

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
many_cpus = { path = "../many_cpus" }

[dev-dependencies]
axum = { workspace = true }
criterion = { workspace = true }
mockall = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "region_cached"
harness = false
