[package]
name = "region_cached"
description = "Add a layer of cache between L3 and main memory"
publish = true
version = "0.1.2"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }
linked = { workspace = true }
many_cpus = { workspace = true }
rsevents = { workspace = true }
simple-mermaid = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
benchmark_utils = { workspace = true }
criterion = { workspace = true }
mockall = { workspace = true }
mutants = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "region_cached"
harness = false
