[package]
name = "region_local"
description = "Isolate variable storage per memory region, similar to `thread_local!`"
publish = true
version = "0.0.1"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
many_cpus = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
criterion = { workspace = true }
mockall = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bench]]
name = "region_local"
harness = false
