[package]
name = "testing"
description = "Private helpers for testing and examples in Folo crates"
publish = false
version = "0.0.1-never"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doc = false

[features]
default = []

[dependencies]

[target.'cfg(windows)'.dependencies]
deranged = { workspace = true, features = ["macros"] }
new_zealand = { workspace = true }
windows = { workspace = true, features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
mutants = { workspace = true }

[lints]
workspace = true
